gcc/testsuite/g++.dg/diagnostic/static-cdtor-1.C
struct S
{
  static S();  // { dg-error "3:constructor" }
  static ~S();  // { dg-error "3:destructor" }
};
